# MicTest12

./: .gitignore  404.html  CLAUDE.md  CONTRIBUTING.md  GAMING_MICROSERVICES_PLAN.md  LLM_TEST_COVERAGE_PLAN.md  README.md  ROADMAP.md  USER_AUTH_PLAN.md  about.html  analyze_image.py  app.html  app.py  bakery.html  barber_booking_agent.py  calc.py  calculator.py  clean_data.py  compendium.html  compression.py  contact.html  csv_clean_summary.py  dashboard.html  divide.py  email_template.py  f1.html  global-warming-solutions.md  global-warming.html  hello.html  hero-sustainable.html  hero.html  history.py  hntk.html  home.html  index.html  juliana.html  landing.html  markdown-with-tap.md  menu.html  news.html  (+38 more)
.github/workflows/: tests.yml
__tests__/: shoppingCart.test.js
abc_bank/: README.md
barber_booking/: __init__.py  __main__.py  booking.py  cli.py  models.py  notifications.py  persistence.py  store.py
clothing-website/: README.md  about.html  contact.html  index.html  main.js  shop.html  styles.css
dashboard/: README.md  index.html  package-lock.json  package.json
dashboard/src/: App.tsx  index.css  main.tsx
src/: hero.html  shoppingCart.js
static/: style.css
templates/: about.html  base.html  contact.html  home.html  messages.html
tests/: conftest.py  test_analyze_image.py  test_barber_booking_agent.py  test_booking.py  test_cli.py  test_models.py  test_notifications.py  test_paypal_demo_db.py  test_persistence.py  test_store.py  test_sudoku.py
tests-e2e/: paypal-login.spec.js
upspring/: SPECIFICATIONS.md  discussion.html  signin.html
(+24 files in other folders)
